ubuntu-mono (0.0.40) UNRELEASED; urgency=low

  * indicator-appmenu-menu-panel: add for LIM
    (Locally Integrated Menu) support (LP: #931245)

 -- Paul Sladen <sladen@canonical.com>  Thu, 01 Mar 2012 02:26:56 +0000

ubuntu-mono (0.0.39) precise; urgency=low

  * Add icons for gnome-control-center category headers (LP: #921061)

 -- Aurélien Gâteau <aurelien.gateau@ubuntu.com>  Tue, 24 Jan 2012 17:34:16 +0100

ubuntu-mono (0.0.38) precise; urgency=low

  * debian/control:
    - Bump libmagickcore3-extra build dep to libmagickcore4-extra

 -- Michael Terry <mterry@ubuntu.com>  Fri, 18 Nov 2011 13:09:34 -0500

ubuntu-mono (0.0.37) oneiric; urgency=low

  [Paul Sladen]
  * Pre-caching: buildd build fails to pick up underlying raster wallpaper
    from 'ubuntu-wallpapers', leaving the icon empty unless highlighted.
    Work-around by just including the .pngs that *do* get successfully
    build locally and copying these in during debian/rules::install
    (LP: #862040)

 -- Paul Sladen <sladen@canonical.com>  Thu, 29 Sep 2011 21:08:51 +0100

ubuntu-mono (0.0.36) oneiric; urgency=low

  [Paul Sladen]
  * FTBFS: Add 'libmagickcore3-extra' dependency as this appears to be
    non-implicit for Imagemagick SVG handling.

 -- Paul Sladen <sladen@canonical.com>  Wed, 28 Sep 2011 10:56:47 +0100

ubuntu-mono (0.0.35) oneiric; urgency=low

  [Paul Sladen]
  * Replace/provide 'input-keyboard' (LP: #827426)
  * Pre-cache 'user-desktop' to PNGs for speed (LP: #856475)

 -- Paul Sladen <sladen@canonical.com>  Wed, 28 Sep 2011 02:32:49 +0100

ubuntu-mono (0.0.34) oneiric; urgency=low

  [Christian Giordan/Xi Zhu]
  * Revert "power-cog" to combined design (System-Devices indicator)
    {dark,light}/…/system-devices-panel{,-alert,-warming} (LP: #844049)

  [Xi Zhu/Paul Sladen]
  * Enlarge percent coverage for '*/user-desktop.svg' (LP: #841885)

  [Paul Sladen]
  * Try to workaround a bug in rsvg that leaves a black border, by