@@ -2,6 +2,7 @@ ubuntu-mono (0.0.40) UNRELEASED; urgency=low
 
   * indicator-appmenu-menu-panel: add for LIM
     (Locally Integrated Menu) support (LP: #931245)
+  * FTBFS: comment out the background-rebuilding for the moment
 
  -- Paul Sladen <sladen@canonical.com>  Thu, 01 Mar 2012 02:26:56 +0000
 
